# pystructtype

./: .gitignore  .readthedocs.yaml  README.md  VERSION  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
docs/: conf.py  index.rst
pystructtypes/: bits.py  structdataclass_f.py  structtypes.py  utils.py
src/pystructtype/: __init__.py  bitstype.py  structdataclass.py  structtypes.py  utils.py
test/: __init__.py  examples.py  test_bitstype.py  test_ctypes.py  test_examples.py  test_structdataclass_additional.py  test_structtypes.py  test_utils.py
tests/: test_ctypes.py
