[project]
name = "pystructtype"
version = "0.3.0"
description = "Leverage Python Types to Define C-Struct Interfaces"
readme = "README.md"
authors = [{name = "fchorney", email = "github@djsbx.com"}]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.14",
]
keywords = ["struct", "cstruct", "type"]
requires-python = ">=3.14,<4.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/fchorney/pystructtype"
Documentation = "https://pystructtype.readthedocs.io/en/latest/"
Repository = "https://github.com/fchorney/pystructtype"
Issues = "https://github.com/fchorney/pystructtype/issues"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.12",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.15.6",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-rtd-theme>=3.1.0",
    "tox>=4.49.1",
    "tox-uv>=1.33.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = false
check_untyped_defs = true
exclude = ["venv", ".venv"]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = ["if __name__ == .__main__.:", "def __str__", "def __repr__", "pragma: no cover"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
exclude = []

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "ARG001",   # unused arguments in functions
    "RUF",      # ruff specific rules
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
